Revisi ukuran Logo

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           </div>
           <!-- Right Column -->
           <div class="right-column text-center d-flex justify-content-lg-end justify-content-center pe-0">
-            <img id="img-fluid" class="h-auto mw-100"
+            <img id="img-fluid" class="mw-100"
               src="img/logo-rapimnas2.png"
               alt="" />
           </div>
@@ -525,7 +525,7 @@
         </div> -->
       </div>
       <div class="btn-daftar text-center">
-        <button class="btn btn-learn text-white">Pendaftaran</button>
+        <a href="https://bagi.to/RAPIMNAS2021PII" class="btn btn-learn text-white">Pendaftaran</a>
       </div>
     </div>
   </section><section class="h-100 w-100 bg-white" style="box-sizing: border-box">
