Revisi ukuran logo 2

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           </div>
           <!-- Right Column -->
           <div class="right-column text-center d-flex justify-content-lg-end justify-content-center pe-0">
-            <img id="img-fluid" class="mw-100"
+            <img id="img-fluid"
               src="img/logo-rapimnas2.png"
               alt="" />
           </div>
