Update Rapimnas logo white

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           <!-- Right Column -->
           <div class="right-column text-center d-flex justify-content-lg-end justify-content-center pe-0">
             <img class="img-fluid h-auto mw-100"
-              src="img/logo-rapimnas2.png"
+              src="img/503x361 logo rapimnas.png"
               alt="" />
           </div>
         </div>
@@ -368,6 +368,9 @@
       
     </div>
     <div class="container">
+      <div class="text-center">
+        <h1 class="text-white">Road to Batam</h1>
+      </div>
       <div class="countdown justify-content-center">
         <div id="hari">NA</div>
         <div id="jam">NA</div>
@@ -524,7 +527,7 @@
           <button class="btn btn-learn text-white">Learn More</button>
         </div> -->
       </div>
-      <div class="btn-daftar text-center">
+      <div class="btn-daftar mt-5 text-center">
         <a href="https://bagi.to/RAPIMNAS2021PII" class="btn btn-learn text-white">Pendaftaran</a>
       </div>
     </div>
