--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         padding: 3rem 2rem;
       }
 
-      .header-4-1 .navbar-light .navbar-nav .nav-link {
+      .header-4-1 .navbar-dark .navbar-nav .nav-link {
         font: 300 18px/1.5rem Poppins, sans-serif;
         color: #707092;
         transition: 0.3s;
       }
 
-      .header-4-1 .navbar-light .navbar-nav .nav-link:hover {
+      .header-4-1 .navbar-dark .navbar-nav .nav-link:hover {
         font: 600 18px/1.5rem Poppins, sans-serif;
         color: #E7E7E8;
         transition: 0.3s;
       }
 
-      .header-4-1 .navbar-light .navbar-nav .active>.nav-link,
-      .header-4-1 .navbar-light .navbar-nav .nav-link.active,
-      .header-4-1 .navbar-light .navbar-nav .nav-link.show,
-      .header-4-1 .navbar-light .navbar-nav .show>.nav-link {
+      .header-4-1 .navbar-dark .navbar-nav .active>.nav-link,
+      .header-4-1 .navbar-dark .navbar-nav .nav-link.active,
+      .header-4-1 .navbar-dark .navbar-nav .nav-link.show,
+      .header-4-1 .navbar-dark .navbar-nav .show>.nav-link {
         font-weight: 600;
         transition: 0.3s;
       }
 
-      .header-4-1 .navbar-light .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+      .header-4-1 .navbar-dark .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
       }
 
       .header-4-1 .btn:focus,
@@ -260,7 +260,7 @@
       }
     </style>
     <div class="header-4-1 container-xxl mx-auto p-0 position-relative" style="font-family: 'Poppins', sans-serif">
-      <nav class="navbar navbar-expand-lg navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <a href="#">
           <img style="margin-right: 0.75rem"
             src="img/icon-rapimnas.png" alt="" />
@@ -738,7 +738,7 @@
 									fill="#C7C7C7" />
 							</svg>
 						</a>
-						<a href="">
+						<!-- <a href="">
 							<svg class="social-media-c" width="30" height="30" viewBox="0 0 30 30" fill="none"
 								xmlns="http://www.w3.org/2000/svg">
 								<circle cx="15" cy="15" r="15" fill="#C7C7C7" />
@@ -754,7 +754,7 @@
 									</clipPath>
 								</defs>
 							</svg>
-						</a>
+						</a> -->
 					</div>
 					<nav class="mx-auto d-flex flex-wrap align-items-center justify-content-center gap-4">
 						<a href="" class="footer-link" style="text-decoration: none">Terms of Service</a>
@@ -764,7 +764,7 @@
 						<a href="" class="footer-link" style="text-decoration: none">Licenses</a>
 					</nav>
 					<nav class="d-flex flex-lg-row flex-column align-items-center justify-content-center">
-						<p style="margin: 0">Copyright © 2021 Analystic Max</p>
+						<p style="margin: 0">Copyright © 2021 RAPIMNAS PII</p>
 					</nav>
 				</div>
 			</div>
@@ -772,7 +772,7 @@
 	</section> 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
       <script type="text/javascript">
-        var countDate = new Date('Jul 20 2021 00:00:00').getTime();
+        var countDate = new Date('Aug 20 2021 00:00:00').getTime();
 
         function newEvent(){
           var now = new Date().getTime();
@@ -781,7 +781,7 @@
           var detik = 1000;
           var menit = detik * 60;
           var jam = menit * 60;
-          var hari = jam * 60;
+          var hari = jam * 24;
 
           var h = Math.floor(gap / (hari));
           var j = Math.floor(gap % (hari) / (jam) );
