--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         <div class="container">
           <div class="text-center">
-            <h1 class="text-white">Road to Batam</h1>
+            <h1 class="text-white">Road to RAPIMNAS PII 2021</h1>
           </div>
           <div class="countdown justify-content-center">
             <div id="hari">NA</div>
