Update location and protocol

--- a/index.html
+++ b/index.html
@@ -53,11 +53,14 @@
                         <a class="nav-link" href="#daftar">Agenda</a>
                       </li>
                       <li class="nav-item">
+                        <a class="nav-link" href="#lokasi">Location</a>
+                      </li>
+                      <!-- <li class="nav-item">
                         <a class="nav-link" href="https://bagi.to/ProposalRAPIMNAS2021">Proposal</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="https://bagi.to/DaftarSposorRapimnasPII2021">Sponsor</a>
-                      </li>
+                      </li> -->
                     </ul>
                   </div>
                   <div class="modal-footer border-0 gap-3" style="padding: 2rem; padding-top: 0.75rem">
@@ -76,11 +79,14 @@
                   <a class="nav-link" href="#daftar">Agenda</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="#lokasi">Location</a>
+                </li>
+                <!-- <li class="nav-item">
                   <a class="nav-link" href="https://bagi.to/ProposalRAPIMNAS2021">Proposal</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="https://bagi.to/DaftarSposorRapimnasPII2021">Sponsor</a>
-                </li>
+                </li> -->
               </ul>
               <div class="gap-3">
                 <a href="https://bagi.to/RAPIMNAS2021PII" class="btn btn-fill text-white">Pendaftaran</a>
@@ -181,10 +187,20 @@
               </div>
             </div>
           </div>
-          <div class="row justify-content-center">
-            <div class="col text-center">
+          <div id="lokasi" class="row justify-content-center">
+            <div class="col-md-4 text-center">
               <img class="img-fluid"
             src="img/location.png"
+            alt="" />
+            </div>
+            <div class="col-md-4 text-center">
+              <img class="img-fluid"
+            src="img/time.png"
+            alt="" />
+            </div>
+            <div class="col-md-6 text-center">
+              <img class="img-fluid"
+            src="img/protocol.png"
             alt="" />
             </div>
           </div>
@@ -206,6 +222,9 @@
                     </li>
                     <li class="list-space">
                       <a href="#daftar" class="list-menu">Agenda</a>
+                    </li>
+                    <li class="list-space">
+                      <a href="#lokasi" class="list-menu">Location</a>
                     </li>
                     <!-- <li class="list-space">
                       <a href="https://bagi.to/DaftarSposorRapimnasPII2021" class="list-menu">Sponsor</a>
