--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
+      <!-- AOS -->
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
       <!-- My CSS -->
       <link rel="stylesheet" href="style.css">
     
@@ -93,7 +96,7 @@
               </div>
             </div>
           </nav>
-          <div>
+          <div class="jumbotron">
             <div class="mx-auto d-flex flex-lg-row flex-column hero">
               <!-- Left Column -->
               <div
@@ -131,20 +134,20 @@
         </div>
         <div class="container">
           <div class="text-center">
-            <h1 class="text-white">Road to RAPIMNAS PII 2021</h1>
+            <h1 class="lead text-white" style="font-size: larger; font: 2em sans-serif; font-weight: bold;"></h1>
           </div>
           <div class="countdown justify-content-center">
-            <div id="hari">NA</div>
-            <div id="jam">NA</div>
-            <div id="menit">NA</div>
-            <div id="detik">NA</div>
+            <div id="hari" data-aos="fade-up" data-aos-duration="500">NA</div>
+            <div id="jam" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">NA</div>
+            <div id="menit" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">NA</div>
+            <div id="detik" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">NA</div>
           </div>
         </div>
       </section>
       <section class="h-100 w-100 bg-white" style="box-sizing: border-box;">
         <div class="content-3-1 container position-relative" style="font-family: 'Poppins', sans-serif">
           <div class="row justify-content-center mb-5">
-            <div class="col text-center">
+            <div class="col text-center" data-aos="zoom-out" >
               <img class="img-fluid"
             src="img/logo-logo-rapimnas.png"
             alt="" />
@@ -152,15 +155,19 @@
           </div>
           <div class="row text-center">
             <div class="col">
-              <h2 id="daftar" class="title-caption">Soft Launching</h2>
-              <p class="fs-1 fw-bolder">RAPIMNAS PERSATUAN INSINYUR INDONESIA 2021</p>
-              <h3 class="text-caption">Tema Webinar</h3>
-              <h2 class="title-caption-2">"Mendorong Kemandirian Industri Kesehatan Nasional"</h2>
+              <div class="row" data-aos="fade-right" data-aos-offset="300"
+              data-aos-easing="ease-in-sine"><h2 id="daftar" class="title-caption">Soft Launching</h2></div>
+              <div class="row" data-aos="fade-left" data-aos-offset="300"
+              data-aos-easing="ease-in-sine"><p class="fs-1 fw-bolder">RAPIMNAS PERSATUAN INSINYUR INDONESIA 2021</p></div>
+              <div class="row" data-aos="fade-right" data-aos-offset="300"
+              data-aos-easing="ease-in-sine"><h3 class="text-caption">Tema Webinar</h3></div>
+              <div class="row" data-aos="fade-left" data-aos-offset="300"
+              data-aos-easing="ease-in-sine"><h2 class="title-caption-2">"Mendorong Kemandirian Industri Kesehatan Nasional"</h2></div>
             </div>
           </div>
           <div class="row justify-content-center mb-5">
             <div class="col-md-4 mb-3">
-              <div class="card text-center h-100" style="width: 18rem;">
+              <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500">
                 <img src="img/card KETUM.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-text">Dr. Ir. Heru Dewanto, ST., M.Sc.(Eng.), IPU., ASEAN Eng., ACPE</h5>
@@ -169,7 +176,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card text-center h-100" style="width: 18rem;">
+              <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
                 <img src="img/card MENKES.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-text">Ir. Budi Gunadi Sadiki, CHFC, CLU.</h5>
@@ -178,7 +185,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-3">
-              <div class="card text-center h-100" style="width: 18rem;">
+              <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
                 <img src="img/card IDI.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-text">dr. Daeng Mohammad Faqih, SH., M.H.</h5>
@@ -188,17 +195,17 @@
             </div>
           </div>
           <div id="lokasi" class="row justify-content-center">
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-center" data-aos="fade-right" data-aos-duration="1000">
               <img class="img-fluid"
             src="img/location.png"
             alt="" />
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-center" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">
               <img class="img-fluid"
             src="img/time.png"
             alt="" />
             </div>
-            <div class="col-md-6 text-center">
+            <div class="col-md-6 text-center" data-aos="fade-up">
               <img class="img-fluid"
             src="img/protocol.png"
             alt="" />
@@ -344,6 +351,26 @@
         </div>
       </section> 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script>
+        AOS.init();
+      </script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/TextPlugin.min.js"></script>
+      <script>
+        gsap.registerPlugin(TextPlugin);
+        gsap.to(".lead", {
+        duration: 2,
+        delay: 1.5,
+        text: "Road to RAPIMNAS PII 2021",
+      });
+        gsap.from(".right-column img", {
+        duration: 1.5,
+        y: "-100%",
+        opacity: 0,
+        ease: "bounce",
+      });
+      </script>
       <script src="script.js"></script>
     </body>
   </html>
