Change Logo Rapimnas 500x500

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <!-- Left Column -->
               <div
                 class="left-column d-flex flex-lg-grow-1 flex-column align-items-lg-start text-lg-start align-items-center text-center">
-                <p class="text-caption">Rabu, 16 Juni 2021.</p>
+                <p class="text-caption">Jumat, 18 Juni 2021.</p>
                 <h1 class="title-text-big">
                   Soft Launching<br class="d-lg-block d-none" />
                   RAPIMNAS PII 2021
@@ -126,7 +126,7 @@
               <!-- Right Column -->
               <div class="right-column text-center d-flex justify-content-lg-end justify-content-center pe-0">
                 <img class="img-fluid h-auto mw-100"
-                  src="img/503x361 logo rapimnas.png"
+                  src="img/500x500 logo rapimnas.png"
                   alt="" />
               </div>
             </div>
@@ -134,7 +134,8 @@
         </div>
         <div class="container">
           <div class="text-center">
-            <h1 class="lead text-white" style="font-size: larger; font: 2em sans-serif; font-weight: bold;"></h1>
+            <!-- <h1 class="lead text-white" style="font-size: larger; font: 1em sans-serif; font-weight: bold;"></h1> -->
+            <h3 class="text-white">Road to RAPIMNAS PII 2021</h3>
           </div>
           <div class="countdown justify-content-center">
             <div id="hari" data-aos="fade-up" data-aos-duration="500">NA</div>
@@ -166,7 +167,7 @@
             </div>
           </div>
           <div class="row justify-content-center mb-5">
-            <div class="col-md-4 mb-3">
+            <div class="col-md-3 mb-3">
               <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500">
                 <img src="img/card KETUM.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -175,7 +176,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-3 mb-3">
               <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
                 <img src="img/card MENKES.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -184,7 +185,16 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 mb-3">
+            <div class="col-md-3 mb-3">
+              <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
+                <img src="img/card KEPALA BRIN.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-text">Dr. Laksana Tri Handoko, M.Sc.</h5>
+                  <p class="card-text mt-4">Kepala Badan Riset dan Inovasi Nasional (BRIN)</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 mb-3">
               <div class="card text-center h-100" style="width: 18rem;" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
                 <img src="img/card IDI.png" class="card-img-top" alt="...">
                 <div class="card-body">
